--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,9 @@ Download = "https://github.com/dionisis2014/nirahmq/releases"
 Documentation = "https://github.com/dionisis2014/nirahmq"
 Issues = "https://github.com/dionisis2014/nirahmq/issues"
 
+[project.optional-dependencies]
+docs = ["sphinx", "sphinx-multiversion", "sphinx-copybutton", "furo"]
+
 [build-system]
 requires = ["hatchling >= 1.26", "hatch-vcs"]
 build-backend = "hatchling.build"
