ci: Generate changelog from commit messages
Signed-off-by: Dionisis Toulatos <toulatosdionisis@gmail.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,11 +21,18 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: python-wheel
+      - name: Generate changelog
+        id: changelog
+        uses: requarks/changelog-action@v1
+        with:
+          token: ${{ github.token }}
+          tag: ${{ github.ref_name }}
+          excludeTypes: ""
       - name: Create release
         uses: softprops/action-gh-release@v2
         with:
           files: nirahmq-*
-          generate_release_notes: true
+          body: ${{ steps.changelog.outputs.changes }}
           prerelease: ${{ contains(github.ref, 'rc') }}
   upload:
     name: Upload to PyPI
