ci: Use general CI workflow
Signed-off-by: Dionisis Toulatos <toulatosdionisis@gmail.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,8 +8,8 @@ on:
 
 jobs:
   build:
-    name: Build package
-    uses: ./.github/workflows/build.yaml
+    name: Run CI workflow
+    uses: ./.github/workflows/ci.yaml
   release:
     name: Create GitHub release
     runs-on: ubuntu-latest
