--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,13 @@
-name: Build package
+name: CI
 
 on:
   push:
   workflow_call:
   workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -25,3 +29,17 @@ jobs:
         with:
           name: python-wheel
           path: dist/
+  lint:
+    name: Run Pylint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '>=3.12'
+      - name: Setup build dependencies
+        run: pip install .[dev]
+      - name: Run Pylint
+        run: pylint --output-format github ./src/nirahmq
