--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,25 +13,24 @@ jobs:
   build:
     name: Build package
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: [ 12, 13 ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Setup Python
+      - name: Setup Python 3.${{ matrix.version }}
         uses: actions/setup-python@v5
         with:
-          python-version: '>=3.12'
+          python-version: '3.${{ matrix.version }}'
       - name: Setup build dependencies
         run: pip install -U build
       - name: Build package
         run: python -m build .
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-wheel
-          path: dist/
   lint:
     name: Run Pylint
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -58,3 +57,23 @@ jobs:
         run: pip install .[dev]
       - name: Run Interrogate
         run: interrogate src
+  wheels:
+    name: Build package wheels
+    runs-on: ubuntu-latest
+    needs: [ build, lint, doc-cov ]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '>=3.12'
+      - name: Setup build dependencies
+        run: pip install -U build
+      - name: Build package
+        run: python -m build .
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-wheel
+          path: dist/
