ci: Increase verbosity of docstring coverage results
Signed-off-by: Dionisis Toulatos <toulatosdionisis@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,7 +56,7 @@ jobs:
       - name: Setup build dependencies
         run: pip install .[dev]
       - name: Run Interrogate
-        run: interrogate src
+        run: interrogate -vv src
   wheels:
     name: Build package wheels
     runs-on: ubuntu-latest
